separate css file

--- a/res/css/style.css
+++ b/res/css/style.css
@@ -1,4 +1,11 @@
 @import url(https://fonts.googleapis.com/css2?family=Sansita:ital,wght@0,400;0,700;0,800;0,900;1,400;1,700;1,800;1,900&display=swap);
+@import url(menu.css);
+@import url(start.css);
+@import url(about.css);
+@import url(courses.css);
+@import url(students.css);
+@import url(faq.css);
+@import url(submit-app.css);
 @import url(desktop-squares.css);
 
 @font-face {
@@ -23,396 +30,6 @@ body {
     line-height: 1.5;
 }
 
-#mobile-menu {
-    display: none;
-    position: fixed;
-    background-color: white;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    z-index: 5;
-    overflow: hidden;
-    background-image: url(../icon/mobile_menu_bg.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position-x: right;
-    background-position-y: bottom;
-}
-
-#close-menu-btn {
-    position: absolute;
-    background: none;
-    background-image: url(../icon/close_mobile_menu_btn.png);
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-    border: none;
-    padding: 0;
-    cursor: pointer;
-    outline: none;
-    top: 20px;
-    right: 20px;
-    width: 30px;
-    height: 30px;
-}
-
-#nav-mobile-menu {
-    display: flex;
-    flex-direction: column;
-}
-
-.mobile-logo {
-    width: 85%;
-    margin: 0 auto;
-    height: 20%;
-    background-image: url(../icon/logo_scrolled.png);
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
-}
-
-#nav-mobile-menu a {
-    display: inline-block;
-    color: #400D69;
-    margin-left: 10%;
-    margin: 3%;
-    font-size: 7.5vw;
-    text-decoration: none;
-}
-
-.mobile-menu-icon {
-    width: 9vw;
-    margin-right: 1vw;
-}
-
-
-#start-section {
-    overflow: hidden;
-    position: relative;
-    padding-left: 5%;
-    padding-right: 5%;
-    margin-top: 0;
-    padding-top: 8vh;
-    height: 91vh;
-    width: 100%;
-    background-image: linear-gradient(90deg, #1E7B9D, #400A68);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.start-content {
-    text-align: center;
-    width: 100%;
-    height: 100%;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    z-index: 1;
-}
-
-header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    color: white;
-    height: 8vh;
-    background-color: rgba(231, 105, 228, 0.25);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0px 10px;
-    z-index: 3;
-}
-
-.header-scrolled {
-    background-color: rgba(255, 255, 255, 0.9);
-    box-shadow: 0 2px 10px gray;
-}
-
-#logo-link {
-    display: block;
-    height: 100%;
-    width: 15vw;
-}
-
-.logo {
-    width: 100%;
-    height: 100%;
-    background-image: url(../icon/logo.png);
-    background-size: contain;
-    background-position: left;
-    background-repeat: no-repeat;
-}
-
-.logo-scrolled {
-    width: 100%;
-    height: 100%;
-    background-image: url(../icon/logo_scrolled.png);
-    background-size: contain;
-    background-position: left;
-    background-repeat: no-repeat;
-}
-
-.menu {
-    height: 100%;
-    padding-right: 1%;
-    width: 50%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.menu-item {
-    text-decoration: none;
-    font-size: 2vw;
-    transition: 0.5s;
-}
-
-.menu-button-scrolled {
-    color: black;
-}
-
-.menu-button-scrolled:hover {
-    color: #400D69;
-}
-
-.menu-button-no-scrolled {
-    color: white;
-}
-
-.menu-button-no-scrolled:hover {
-    color: #E769E4;
-}
-
-.start-content h1 {
-    font-size: 7vw;
-    text-shadow: 0px 5px 10px rgb(49, 49, 49);
-}
-
-#start-section h2 {
-    margin-bottom: 10px;
-    font-size: 2.5vw;
-    letter-spacing: 2px;
-}
-
-#main-btn {
-    max-width: 100%;
-    max-height: 300px;
-    width: 40%;
-    z-index: 1;
-}
-
-#select-course {
-    width: 20%;
-    margin-top: 30px;
-    position: relative;
-}
-
-#select-course-btn {
-    width: 100%;
-}
-
-#select-course:hover {
-    animation-name: select-course-btn-animation;
-    animation-duration: 3s;
-    animation-iteration-count: infinite;
-}
-
-.blue-letter {
-    color: #A4FFDE;
-}
-
-.purple-letter {
-    color: #E769E4;
-}
-
-#mountains {
-    position: absolute;
-    background-image: url(../icon/mountains.png);
-    width: 35%;
-    height: 60vh;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: bottom;
-    left: 0;
-    bottom: 0;
-}
-
-#right-tree {
-    position: absolute;
-    background-image: url(../icon/right-tree.png);
-    width: 10%;
-    height: 30vh;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: bottom;
-    right: 7%;
-    bottom: 0;
-}
-
-#kodamic {
-    position: absolute;
-    background-image: url(../icon/kodamic.png);
-    width: 6%;
-    height: 30vh;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: bottom;
-    left: 7%;
-    bottom: 0;
-}
-
-#ground {
-    position: relative;
-    width: 100%;
-    background-image: url(../icon/ground.png);
-    height: 9vh;
-    bottom: 0;
-    background-repeat: no-repeat;
-    background-position: bottom;
-    background-size: cover;
-}
-
-#left-cloud {
-    position: absolute;
-    background-image: url(../icon/two_clouds.png);
-    width: 22%;
-    height: 20vh;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    left: -20vh;
-    top: 20vh;
-    z-index: 0;
-    animation-name: cloud_flying;
-    animation-duration: var(--duration, 8s);
-    animation-iteration-count: infinite;
-}
-
-#right-cloud {
-    position: absolute;
-    background-image: url(../icon/two_clouds.png);
-    width: 25%;
-    height: 23vh;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    right: -11vh;
-    top: 30vh;
-    animation-name: cloud_flying;
-    animation-duration: var(--duration, 6s);
-    animation-iteration-count: infinite;
-}
-
-#mashroom {
-    position: absolute;
-    background-image: url(../icon/mashroom.png);
-    width: 7%;
-    height: 27vh;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: bottom;
-    right: 30%;
-    bottom: 0vh;
-}
-
-#hearts {
-    position: absolute;
-    background-image: url(../icon/hearts.png);
-    width: 15%;
-    height: 15vh;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: left;
-    left: 2vh;
-    top: 6vh;
-}
-
-#stars {
-    position: absolute;
-    background-image: url(../icon/stars.png);
-    width: 15%;
-    height: 15vh;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: right;
-    right: 2vh;
-    top: 6vh;
-}
-
-.top-decor-about {
-    position: absolute;
-    top: -1px;
-    width: 100%;
-    background-image: url(../icon/top_decor_about.png);
-    height: 25vh;
-    background-repeat: repeat-x;
-    background-position: top;
-    background-size: contain;
-    z-index: 1;
-}
-
-#about-section {
-    text-align: center;
-    color: white;
-    position: relative;
-}
-
-.about-container {
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-}
-
-.left {
-    flex: 1;
-    margin-top: 23vh;
-    padding-left: 3%;
-    padding-right: 3%;
-    margin-bottom: 30vh;
-}
-
-.left h2 {
-    color: #400D69;
-    font-size: 3vw;
-    text-align: start;
-}
-
-.left p {
-    margin-top: 20px;
-    color: black;
-    font-size: 2vw;
-    text-align: start;
-}
-
-.right {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.right img {
-    max-width: 50%;
-}
-
-.bottom-decor-about {
-    position: absolute;
-    bottom: -1px;
-    width: 100%;
-    background-image: url(../icon/bottom_decor_about.png);
-    height: 30vh;
-    background-repeat: repeat-x;
-    background-position: bottom;
-    background-size: contain;
-    z-index: 0;
-}
-
 #between-decor-purple {
     background-color: #410E6A;
     width: 100%;
@@ -432,223 +49,6 @@ header {
     text-align: center;
 }
 
-#courses-section {
-    text-align: center;
-    background-color: rgb(221, 245, 255);
-}
-
-.top-decor-courses {
-    position: absolute;
-    top: -1vh;
-    width: 100%;
-    height: 25vh;
-    background-repeat: repeat-x;
-    background-position: top;
-    background-size: contain;
-    z-index: 1;
-    background-image: url(../icon/top_decor_courses.png);
-}
-
-.courses-content {
-    padding-top: 25vh;
-    position: relative;
-    padding-bottom: 20vh;
-}
-
-.courses-container {
-    width: 70%;
-    margin: auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    color: black;
-}
-
-.course-card {
-    width: 35%;
-    margin: 70px;
-    padding: 20px;
-    background-color: #FDFDFD;
-    border-radius: 20px;
-    box-shadow: 0 10px 8px #410E6A;
-    transition: 1s;
-    z-index: 1;
-    border: #f7b63d 3px solid;
-    overflow: visible;
-}
-
-.course-card:hover {
-    background-color: #612c8b;
-    color: white;
-    box-shadow: 7px 15px 8px #410E6A;
-    animation-name: flying;
-    animation-duration: 1s;
-    animation-iteration-count: infinite;
-    border: #f7873d 4px solid;
-}
-
-.course-card:hover img {
-    animation-name: bright;
-    animation-duration: 1s;
-    animation-iteration-count: infinite;
-}
-
-.course-card img {
-    max-width: 40%;
-    height: auto;
-    transform: translateY(-35%);
-    transition: transform 0.3s;
-}
-
-.course-card-text {
-    margin-top: 1vh;
-    width: 60%;
-    margin: 0 auto;
-    transform: translateY(-35%);
-}
-
-.course-card-text h3 {
-    font-family: 'Sansita', sans-serif;
-    font-style: bold;
-    text-align: center;
-    font-size: 2vw;
-}
-
-.course-card-text p {
-    font-family: 'Sansita', sans-serif;
-    font-weight: 400;
-    font-size: 1.4vw;
-    font-style: italic;
-    text-align: center;
-}
-
-.cloud {
-    position: absolute;
-    background-image: url(../icon/cloud.png);
-    width: 15%;
-    height: 18vh;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    z-index: 0;
-    animation-name: cloud_flying;
-    animation-duration: var(--duration, 7s);
-    animation-iteration-count: infinite;
-}
-
-#cloud-right-top {
-    --duration: 5s;
-    right: 5vh;
-    top: 25vh;
-}
-
-#cloud-right-bottom {
-    --duration: 10s;
-    right: 9vh;
-    bottom: 20vh;
-}
-
-#cloud-middle {
-    --duration: 8s;
-    left: 25%;
-    top: 50vh;
-}
-
-#cloud-left-bottom {
-    --duration: 6s;
-    left: 5vh;
-    bottom: 35vh;
-}
-
-.two-clouds {
-    position: absolute;
-    background-image: url(../icon/two_clouds.png);
-    width: 25%;
-    height: 20vh;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    z-index: 0;
-    animation-name: cloud_flying;
-    animation-duration: var(--duration, 7s);
-    --duration: 2s;
-    animation-iteration-count: infinite;
-}
-
-#two-clouds-top {
-    --duration: 7s;
-    left: 5%;
-    top: 10vh;
-}
-
-#two-clouds-bottom {
-    --duration: 9s;
-    bottom: 0;
-    left: 35%;
-}
-
-#students-section {
-    height: 80vh;
-    width: 100%;
-    background-image: linear-gradient(90deg, #1E7B9D, #400A68);
-    font-size: 2.5vw;
-    letter-spacing: 3;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    padding-bottom: 10vh;
-}
-
-#students-section h3 {
-    padding-top: 4vh;
-    padding-bottom: 4vh;
-    letter-spacing: 3px;
-}
-
-#students-container {
-    padding: 2%;
-    display: flex;
-    height: max-content;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: row;
-    height: 100%;
-}
-
-.student-card {
-    background-image: url(../icon/student_bg.png);
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
-    width: 23%;
-    height: 100%;
-    padding: 2%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    transition: 0.6s;
-}
-
-.student-card-photo {
-    width: 100%;
-    height: 100%;
-    background-image: url(../icon/square_example.jpg);
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-    transition: 1s;
-}
-
-.student-card:hover .student-card-photo {
-    transform: scale(1.3);
-}
-
-.student-card:hover {
-    transform: scale(0.9);
-}
-
 #guide-school-section {
     width: 100%;
     height: 100vh;
@@ -659,6 +59,12 @@ header {
     position: relative;
     overflow: hidden;
     background-color: #410E6A;
+}
+
+.square {
+    position: absolute;
+    background-color: #E769E4;
+    z-index: 0;
 }
 
 #guide-school-content {
@@ -683,231 +89,6 @@ header {
     z-index: 1;
 }
 
-#questions-section {
-    width: 100%;
-    min-height: 110vh;
-    padding-bottom: 10vh;
-    height: auto;
-    position: relative;
-    overflow: hidden;
-}
-
-#top-decor-faq {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    background-image: url(../icon/top_decor_without_bubbles.png);
-    height: 25vh;
-    background-repeat: repeat-x;
-    background-position: top;
-    background-size: contain;
-    z-index: 0;
-}
-
-.bubble {
-    position: absolute;
-    background-image: url(../icon/purple_bubble.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    animation: float 5s linear infinite;
-    z-index: 0;
-    display: block;
-    border-radius: 100%;
-}
-
-#questions-content {
-    z-index: 1;
-    padding: 5%;
-    padding-top: 13%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-#questions-content h2 {
-    color: #400D69;
-    font-size: 3vw;
-    text-align: start;
-    z-index: 1;
-}
-
-#fabs {
-    width: 70%;
-    margin: auto;
-    margin-top: 10vh;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    z-index: 1;
-}
-
-.faq-left {
-    margin: 2%;
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-}
-
-.faq-right {
-    margin: 2%;
-    flex: 1.3;
-    display: flex;
-    flex-direction: column;
-}
-
-.faq {
-    width: 100%;
-    padding: 10px;
-    padding-left: 5%;
-    padding-right: 5%;
-    border-radius: 15px;
-    color: #410E6A;
-    font-family: sans-serif;
-    z-index: 2;
-}
-
-.faq-item {
-    margin: 15px;
-    margin-bottom: 5px;
-    background-color: #ffffff;
-    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
-    border: 1px solid #FFC75C;
-    cursor: pointer;
-}
-
-.faq-answer {
-    margin-left: 15px;
-    border: 1px solid #410E6A;
-    display: none;
-    background-color: #f0f0f0;
-}
-
-#submit-app-section {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #410E6A;
-    color: white;
-    height: 80vh;
-}
-
-#submit-app-content {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 80%;
-    padding: 20px;
-    border-radius: 1.7vw;
-    background-color: #ffffff;
-    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.3);
-    border: 2px solid #FFC75C;
-    transition: background-color 0.3s ease;
-}
-
-#submit-app-form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    width: 50%;
-    padding: 20px;
-    transition: background-color 0.3s ease;
-}
-
-#submit-app-form h3 {
-    color: #410E6A;
-    font-size: 2.5vw;
-    margin-bottom: 20px;
-}
-
-#submit-app-form input,
-#course-select {
-    width: 100%;
-    margin-bottom: 10px;
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    background-color: #f0f0f0;
-    font-size: 1.2vw;
-}
-
-#course-select {
-    margin-bottom: 20px;
-    transition: background-color 0.3s ease;
-}
-
-.submit-app-form__btn {
-    width: 100%;
-    padding: 15px;
-    background-color: #FFC75C;
-    border: none;
-    border-radius: 5px;
-    color: #410E6A;
-    font-size: 1.2vw;
-    cursor: pointer;
-}
-
-.submit-app-form__btn:hover {
-    background-color: #410E6A;
-    color: #FFC75C;
-}
-
-#submit-app-photo {
-    width: 40%;
-    border-radius: 10px;
-    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.3);
-}
-
-
-.bottom-decor-faq {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    background-image: url(../icon/bottom_decor_faq.png);
-    height: 15vh;
-    background-repeat: repeat-x;
-    background-position: bottom;
-    background-size: contain;
-    z-index: 1;
-}
-
-.bottom-decor-faq-bg {
-    position: absolute;
-    bottom: -1vh;
-    width: 100%;
-    background-image: linear-gradient(#410e6a00, #410E6A);
-    height: 7vh;
-    background-color: #410E6A;
-    background-repeat: repeat-x;
-    background-position: bottom;
-    background-size: contain;
-    z-index: 0;
-}
-
-.bottom-decor-faq-bg-transparent {
-    position: absolute;
-    bottom: -1vh;
-    width: 100%;
-    background-image: linear-gradient(#410e6a00, #410e6a83);
-    height: 20vh;
-    background-repeat: repeat-x;
-    background-position: bottom;
-    background-size: contain;
-    z-index: 0;
-}
-
-button.submit-app-form__btn {
-    width: 50%;
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    background-color: #4CAF50;
-    color: white;
-    cursor: pointer;
-}
-
 footer {
     background-color: #333;
     color: #fff;
@@ -924,42 +105,6 @@ footer a:hover {
     text-decoration: underline;
 }
 
-.square {
-    position: absolute;
-    background-color: #E769E4;
-    z-index: 0;
-}
-
-@keyframes float {
-    0% {
-        transform: translateY(-10px);
-        opacity: 1;
-    }
-
-    90% {
-        opacity: 1;
-    }
-
-    100% {
-        transform: translateY(100vh);
-        opacity: 0;
-    }
-}
-
-@keyframes flying {
-    0% {
-        transform: translateY(0px);
-    }
-
-    50% {
-        transform: translateY(-10px);
-    }
-
-    100% {
-        transform: translateY(0);
-    }
-}
-
 @keyframes cloud_flying {
     0% {
         transform: translateX(0px);
@@ -971,51 +116,6 @@ footer a:hover {
 
     100% {
         transform: translateX(0);
-    }
-}
-
-@keyframes bright {
-    0% {
-        filter: brightness(1);
-    }
-
-    50% {
-        filter: brightness(1.4);
-    }
-
-    100% {
-        filter: brightness(1);
-    }
-}
-
-@keyframes sparkles_animation {
-    0% {
-        filter: brightness(2);
-    }
-
-    50% {
-        filter: brightness(1);
-    }
-
-    100% {
-        filter: brightness(3);
-    }
-}
-
-@keyframes select-course-btn-animation {
-    0% {
-        filter: brightness(1);
-        transform: scale(1);
-    }
-
-    50% {
-        filter: brightness(1.4);
-        transform: scale(1.03);
-    }
-
-    100% {
-        filter: brightness(1);
-        transform: scale(1);
     }
 }
 
