add widget for contact, form for contact use API bitrix24

--- a/res/css/style.css
+++ b/res/css/style.css
@@ -24,6 +24,10 @@
     font-weight: 100;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: 'SuperMario', sans-serif;
     color: white;
