--- a/res/css/submit-app.css
+++ b/res/css/submit-app.css
@@ -1,4 +1,3 @@
-
 #submit-app-section {
     display: flex;
     justify-content: center;
@@ -21,7 +20,7 @@
     transition: background-color 0.3s ease;
 }
 
-#submit-app-form {
+#submit-app-block {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -31,13 +30,13 @@
     transition: background-color 0.3s ease;
 }
 
-#submit-app-form h3 {
+#submit-app-block h3 {
     color: #410E6A;
     font-size: 2.5vw;
     margin-bottom: 20px;
 }
 
-#submit-app-form input,
+#submit-app-block input,
 #course-select {
     width: 100%;
     margin-bottom: 10px;
@@ -76,11 +75,34 @@
 }
 
 button.submit-app-form__btn {
-    width: 50%;
+    width: 100%;
     padding: 10px;
     border: none;
     border-radius: 5px;
     background-color: #4CAF50;
     color: white;
     cursor: pointer;
+}
+
+#submit-app-modal {
+    display: none;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+    justify-content: center;
+    align-items: center;
+}
+
+#submit-app-modal-content {
+    background-color: white;
+    color: black;
+    padding: 20px;
+    border-radius: 5px;
+    max-width: 300px;
+    margin: auto;
+    text-align: center;
 }
