try fix icon #2

--- a/res/css/mobile.css
+++ b/res/css/mobile.css
@@ -357,7 +357,11 @@ header {
 }
 
 #course-modal-icon {
-    max-height: max-content;
+    max-height: 15vh;
+}
+
+.course-image {
+    max-height: 30vh;
 }
 
 .course-details {
